--- a/SegundoTP/package.json
+++ b/SegundoTP/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "segundotp",
+  "name": "clase-7",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node index.js",
+    "watch": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
